old_second_version/TxScriptParser.py
# Generated from TxScript.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class TxScriptParser ( Parser ):

    grammarFileName = "TxScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'contract'", "'{'", "'resources_bound'", 
                     "':'", "';'", "'agents_bound'", "'tokens_bound'", "'}'", 
                     "'int'", "'float'", "'bool'", "'='", "'true'", "'false'", 
                     "'map'", "'('", "'participant'", "'->'", "')'", "'query'", 
                     "'#'", "'?'", "'not'", "'!'", "'*'", "'/'", "'+'", 
                     "'-'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'and'", "'&'", "'or'", "'|'", "'implies'", "'Exists'", 
                     "'.'", "'Forall'", "'sum'", "','", "'in'", "'['", "']'", 
                     "'require'", "'null'", "'skip'", "'if'", "'then'", 
                     "'else'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "LABEL", "LABELUPPER", "NUMBER", 
                      "REAL", "TYPE", "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_contractExpr = 0
    RULE_globalVarsExpr = 1
    RULE_globalVarExpr = 2
    RULE_mapExpr = 3
    RULE_firstOrderFormulasExpr = 4
    RULE_firstOrderFormulaExpr = 5
    RULE_proceduresExpr = 6
    RULE_procedureExpr = 7
    RULE_requiresExpr = 8
    RULE_requireExpr = 9
    RULE_expression = 10
    RULE_pArgsExprs = 11
    RULE_pArgsExpr = 12
    RULE_bodyExprs = 13
    RULE_bodyExpr = 14
    RULE_constantExpr = 15

    ruleNames =  [ "contractExpr", "globalVarsExpr", "globalVarExpr", "mapExpr", 
                   "firstOrderFormulasExpr", "firstOrderFormulaExpr", "proceduresExpr", 
                   "procedureExpr", "requiresExpr", "requireExpr", "expression", 
                   "pArgsExprs", "pArgsExpr", "bodyExprs", "bodyExpr", "constantExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    LABEL=54
    LABELUPPER=55
    NUMBER=56
    REAL=57
    TYPE=58
    WS=59
    COMMENT=60
    LINE_COMMENT=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ContractExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.resBound = None # Token
            self.agentBound = None # Token
            self.tokenBound = None # Token
            self.gVars = None # GlobalVarsExprContext
            self.child = None # ProceduresExprContext
            self.phis = None # FirstOrderFormulasExprContext

        def LABELUPPER(self):
            return self.getToken(TxScriptParser.LABELUPPER, 0)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(TxScriptParser.NUMBER)
            else:
                return self.getToken(TxScriptParser.NUMBER, i)

        def proceduresExpr(self):
            return self.getTypedRuleContext(TxScriptParser.ProceduresExprContext,0)


        def firstOrderFormulasExpr(self):
            return self.getTypedRuleContext(TxScriptParser.FirstOrderFormulasExprContext,0)


        def globalVarsExpr(self):
            return self.getTypedRuleContext(TxScriptParser.GlobalVarsExprContext,0)


        def getRuleIndex(self):
            return TxScriptParser.RULE_contractExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContractExpr" ):
                listener.enterContractExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContractExpr" ):
                listener.exitContractExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContractExpr" ):
                return visitor.visitContractExpr(self)
            else:
                return visitor.visitChildren(self)




    def contractExpr(self):

        localctx = TxScriptParser.ContractExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_contractExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(TxScriptParser.T__0)
            self.state = 33
            localctx.name = self.match(TxScriptParser.LABELUPPER)
            self.state = 34
            self.match(TxScriptParser.T__1)
            self.state = 35
            self.match(TxScriptParser.T__2)
            self.state = 36
            self.match(TxScriptParser.T__3)
            self.state = 37
            localctx.resBound = self.match(TxScriptParser.NUMBER)
            self.state = 38
            self.match(TxScriptParser.T__4)
            self.state = 39
            self.match(TxScriptParser.T__5)
            self.state = 40
            self.match(TxScriptParser.T__3)
            self.state = 41
            localctx.agentBound = self.match(TxScriptParser.NUMBER)
            self.state = 42
            self.match(TxScriptParser.T__4)
            self.state = 43
            self.match(TxScriptParser.T__6)
            self.state = 44
            self.match(TxScriptParser.T__3)
            self.state = 45
            localctx.tokenBound = self.match(TxScriptParser.NUMBER)
            self.state = 46
            self.match(TxScriptParser.T__4)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TxScriptParser.T__8) | (1 << TxScriptParser.T__9) | (1 << TxScriptParser.T__10) | (1 << TxScriptParser.T__14))) != 0):
                self.state = 47
                localctx.gVars = self.globalVarsExpr()


            self.state = 50
            localctx.child = self.proceduresExpr()
            self.state = 51
            self.match(TxScriptParser.T__7)
            self.state = 52
            localctx.phis = self.firstOrderFormulasExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GlobalVarsExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def globalVarExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TxScriptParser.GlobalVarExprContext)
            else:
                return self.getTypedRuleContext(TxScriptParser.GlobalVarExprContext,i)


        def getRuleIndex(self):
            return TxScriptParser.RULE_globalVarsExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalVarsExpr" ):
                listener.enterGlobalVarsExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalVarsExpr" ):
                listener.exitGlobalVarsExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalVarsExpr" ):
                return visitor.visitGlobalVarsExpr(self)
            else:
                return visitor.visitChildren(self)




    def globalVarsExpr(self):

        localctx = TxScriptParser.GlobalVarsExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_globalVarsExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 54
                self.globalVarExpr()
                self.state = 57 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TxScriptParser.T__8) | (1 << TxScriptParser.T__9) | (1 << TxScriptParser.T__10) | (1 << TxScriptParser.T__14))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GlobalVarExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TxScriptParser.RULE_globalVarExpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class GlobalMapContext(GlobalVarExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.GlobalVarExprContext
            super().__init__(parser)
            self.mapDef = None # MapExprContext
            self.name = None # Token
            self.copyFrom(ctx)

        def mapExpr(self):
            return self.getTypedRuleContext(TxScriptParser.MapExprContext,0)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalMap" ):
                listener.enterGlobalMap(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalMap" ):
                listener.exitGlobalMap(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalMap" ):
                return visitor.visitGlobalMap(self)
            else:
                return visitor.visitChildren(self)


    class GlobalVarContext(GlobalVarExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.GlobalVarExprContext
            super().__init__(parser)
            self.ty = None # Token
            self.name = None # Token
            self.val = None # Token
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)
        def NUMBER(self):
            return self.getToken(TxScriptParser.NUMBER, 0)
        def REAL(self):
            return self.getToken(TxScriptParser.REAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalVar" ):
                listener.enterGlobalVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalVar" ):
                listener.exitGlobalVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalVar" ):
                return visitor.visitGlobalVar(self)
            else:
                return visitor.visitChildren(self)



    def globalVarExpr(self):

        localctx = TxScriptParser.GlobalVarExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_globalVarExpr)
        self._la = 0 # Token type
        try:
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TxScriptParser.T__8, TxScriptParser.T__9, TxScriptParser.T__10]:
                localctx = TxScriptParser.GlobalVarContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                localctx.ty = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TxScriptParser.T__8) | (1 << TxScriptParser.T__9) | (1 << TxScriptParser.T__10))) != 0)):
                    localctx.ty = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 60
                localctx.name = self.match(TxScriptParser.LABEL)
                self.state = 61
                self.match(TxScriptParser.T__11)
                self.state = 62
                localctx.val = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TxScriptParser.T__12) | (1 << TxScriptParser.T__13) | (1 << TxScriptParser.NUMBER) | (1 << TxScriptParser.REAL))) != 0)):
                    localctx.val = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 63
                self.match(TxScriptParser.T__4)
                pass
            elif token in [TxScriptParser.T__14]:
                localctx = TxScriptParser.GlobalMapContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                localctx.mapDef = self.mapExpr()
                self.state = 65
                localctx.name = self.match(TxScriptParser.LABEL)
                self.state = 66
                self.match(TxScriptParser.T__4)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MapExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.domain = None # Token
            self.codomain = None # Token


        def getRuleIndex(self):
            return TxScriptParser.RULE_mapExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapExpr" ):
                listener.enterMapExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapExpr" ):
                listener.exitMapExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMapExpr" ):
                return visitor.visitMapExpr(self)
            else:
                return visitor.visitChildren(self)




    def mapExpr(self):

        localctx = TxScriptParser.MapExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_mapExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(TxScriptParser.T__14)
            self.state = 71
            self.match(TxScriptParser.T__15)
            self.state = 72
            localctx.domain = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TxScriptParser.T__8) | (1 << TxScriptParser.T__9) | (1 << TxScriptParser.T__10) | (1 << TxScriptParser.T__16))) != 0)):
                localctx.domain = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 73
            self.match(TxScriptParser.T__17)
            self.state = 74
            localctx.codomain = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TxScriptParser.T__8) | (1 << TxScriptParser.T__9) | (1 << TxScriptParser.T__10) | (1 << TxScriptParser.T__16))) != 0)):
                localctx.codomain = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 75
            self.match(TxScriptParser.T__18)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FirstOrderFormulasExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.child = None # FirstOrderFormulaExprContext

        def firstOrderFormulaExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TxScriptParser.FirstOrderFormulaExprContext)
            else:
                return self.getTypedRuleContext(TxScriptParser.FirstOrderFormulaExprContext,i)


        def getRuleIndex(self):
            return TxScriptParser.RULE_firstOrderFormulasExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFirstOrderFormulasExpr" ):
                listener.enterFirstOrderFormulasExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFirstOrderFormulasExpr" ):
                listener.exitFirstOrderFormulasExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFirstOrderFormulasExpr" ):
                return visitor.visitFirstOrderFormulasExpr(self)
            else:
                return visitor.visitChildren(self)




    def firstOrderFormulasExpr(self):

        localctx = TxScriptParser.FirstOrderFormulasExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_firstOrderFormulasExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TxScriptParser.T__19:
                self.state = 77
                self.match(TxScriptParser.T__19)
                self.state = 78
                self.match(TxScriptParser.T__1)
                self.state = 79
                localctx.child = self.firstOrderFormulaExpr(0)
                self.state = 80
                self.match(TxScriptParser.T__7)
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FirstOrderFormulaExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TxScriptParser.RULE_firstOrderFormulaExpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class FunctionFormulaContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.child = None # Token
            self.agent = None # Token
            self.amount = None # Token
            self.token = None # Token
            self.copyFrom(ctx)

        def LABEL(self, i:int=None):
            if i is None:
                return self.getTokens(TxScriptParser.LABEL)
            else:
                return self.getToken(TxScriptParser.LABEL, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionFormula" ):
                listener.enterFunctionFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionFormula" ):
                listener.exitFunctionFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionFormula" ):
                return visitor.visitFunctionFormula(self)
            else:
                return visitor.visitChildren(self)


    class TokenijnContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.i = None # Token
            self.j = None # Token
            self.n = None # Token
            self.copyFrom(ctx)

        def LABEL(self, i:int=None):
            if i is None:
                return self.getTokens(TxScriptParser.LABEL)
            else:
                return self.getToken(TxScriptParser.LABEL, i)
        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(TxScriptParser.NUMBER)
            else:
                return self.getToken(TxScriptParser.NUMBER, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTokenijn" ):
                listener.enterTokenijn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTokenijn" ):
                listener.exitTokenijn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTokenijn" ):
                return visitor.visitTokenijn(self)
            else:
                return visitor.visitChildren(self)


    class NEqFormulaContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.left = None # FirstOrderFormulaExprContext
            self.right = None # FirstOrderFormulaExprContext
            self.copyFrom(ctx)

        def firstOrderFormulaExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TxScriptParser.FirstOrderFormulaExprContext)
            else:
                return self.getTypedRuleContext(TxScriptParser.FirstOrderFormulaExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNEqFormula" ):
                listener.enterNEqFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNEqFormula" ):
                listener.exitNEqFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNEqFormula" ):
                return visitor.visitNEqFormula(self)
            else:
                return visitor.visitChildren(self)


    class MultDivEqFormulaContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.left = None # FirstOrderFormulaExprContext
            self.op = None # Token
            self.right = None # FirstOrderFormulaExprContext
            self.copyFrom(ctx)

        def firstOrderFormulaExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TxScriptParser.FirstOrderFormulaExprContext)
            else:
                return self.getTypedRuleContext(TxScriptParser.FirstOrderFormulaExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultDivEqFormula" ):
                listener.enterMultDivEqFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultDivEqFormula" ):
                listener.exitMultDivEqFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultDivEqFormula" ):
                return visitor.visitMultDivEqFormula(self)
            else:
                return visitor.visitChildren(self)


    class LessEqFormulaContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.left = None # FirstOrderFormulaExprContext
            self.right = None # FirstOrderFormulaExprContext
            self.copyFrom(ctx)

        def firstOrderFormulaExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TxScriptParser.FirstOrderFormulaExprContext)
            else:
                return self.getTypedRuleContext(TxScriptParser.FirstOrderFormulaExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLessEqFormula" ):
                listener.enterLessEqFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLessEqFormula" ):
                listener.exitLessEqFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLessEqFormula" ):
                return visitor.visitLessEqFormula(self)
            else:
                return visitor.visitChildren(self)


    class AtomFormulaContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.child = None # Token
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)
        def NUMBER(self):
            return self.getToken(TxScriptParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomFormula" ):
                listener.enterAtomFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomFormula" ):
                listener.exitAtomFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomFormula" ):
                return visitor.visitAtomFormula(self)
            else:
                return visitor.visitChildren(self)


    class SumFormulaContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.child = None # FirstOrderFormulaExprContext
            self.var = None # Token
            self.varMin = None # Token
            self.varMax = None # Token
            self.copyFrom(ctx)

        def firstOrderFormulaExpr(self):
            return self.getTypedRuleContext(TxScriptParser.FirstOrderFormulaExprContext,0)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)
        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(TxScriptParser.NUMBER)
            else:
                return self.getToken(TxScriptParser.NUMBER, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSumFormula" ):
                listener.enterSumFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSumFormula" ):
                listener.exitSumFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSumFormula" ):
                return visitor.visitSumFormula(self)
            else:
                return visitor.visitChildren(self)


    class AndFormulaContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.left = None # FirstOrderFormulaExprContext
            self.right = None # FirstOrderFormulaExprContext
            self.copyFrom(ctx)

        def firstOrderFormulaExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TxScriptParser.FirstOrderFormulaExprContext)
            else:
                return self.getTypedRuleContext(TxScriptParser.FirstOrderFormulaExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndFormula" ):
                listener.enterAndFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndFormula" ):
                listener.exitAndFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndFormula" ):
                return visitor.visitAndFormula(self)
            else:
                return visitor.visitChildren(self)


    class AtomFormulaNContext(FirstOrderFormulaExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FirstOrderFormulaExprContext
            super().__init__(parser)
            self.child = None # Token
            self.n = None # Token
            self.copyFrom(ctx)
